[build-system]
requires = [
  "setuptools >= 68",
  "wheel",
  "setuptools-git >= 1.1",
  "pytest-runner",
  "toml",
  "reahl-component-metadata >= 7.0.0"
  ]
build-backend = "setuptools.build_meta"

[project]
name = "reahl-doc"
version = "7.0.0"
description = "Documentation and examples for Reahl."
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Documentation"
  ]
dependencies = [
  "reahl-web>=7.0,<7.1",
  "reahl-component>=7.0,<7.1",
  "reahl-sqlalchemysupport>=7.0,<7.1",
  "reahl-web-declarative>=7.0,<7.1",
  "reahl-domain>=7.0,<7.1",
  "reahl-domainui>=7.0,<7.1",
  "reahl-commands>=7.0,<7.1",
  "reahl-dev>=7.0,<7.1",
  "reahl-paypalsupport>=7.0,<7.1",
  "pytest>=3.0",
  "setuptools>=51.0.0",
  "plotly>=5.11.0,<5.16.99999"
  ]
authors = [ 
  {name = "Iwan Vosloo", email = "iwan@reahl.org"},
  {name = "Craig Sparks", email = "craig@reahl.org"}
]

[project.optional-dependencies]
test = [
  "pytest>=3.0",
  "Sphinx",
  "sphinxcontrib-plantuml",
  "sphinxcontrib-applehelp==1.0.4",
  "sphinxcontrib-devhelp==1.0.2",
  "sphinxcontrib-htmlhelp==2.0.1",
  "sphinxcontrib-jsmath==1.0.1",
  "sphinxcontrib-qthelp==1.0.3",
  "sphinxcontrib-serializinghtml==1.1.5",
  "flaky>=3.7.0",
  "reahl-tofu",
  "reahl-stubble",
  "reahl-dev",
  "reahl-webdev",
  "reahl-browsertools",
  "reahl-postgresqlsupport",
  "reahl-sqlitesupport",
  "reahl-mysqlsupport"
  ]

[project.entry-points."reahl.translations"]
reahl-doc = "reahl.messages"

[project.entry-points."reahl.component.commands"]
GetExample = "reahl.doc.commands:GetExample"
ListExamples = "reahl.doc.commands:ListExamples"

[tool.setuptools.packages.find]
exclude = ["etc", "build", "dist"]

[tool.reahl-component]
configuration = "reahl.doc.examples.tutorial.componentconfigbootstrap.componentconfigbootstrap:AddressConfig"
persisted = [
  "reahl.doc.examples.features.persistence.persistence:Comment",
  "reahl.doc.examples.features.dynamiccontent.dynamiccontent:Calculator",
  "reahl.doc.examples.web.fileupload.fileupload:Comment",
  "reahl.doc.examples.web.fileupload.fileupload:AttachedFile",
  "reahl.doc.examples.tutorial.test_model2:Address",
  "reahl.doc.examples.tutorial.addressbook2.addressbook2:Address",
  "reahl.doc.examples.tutorial.addressbook2bootstrap.addressbook2bootstrap:Address",
  "reahl.doc.examples.tutorial.addressbook1.addressbook1:Address",
  "reahl.doc.examples.tutorial.pageflow1.pageflow1:Address",
  "reahl.doc.examples.tutorial.parameterised1.parameterised1:Address",
  "reahl.doc.examples.tutorial.parameterised2.parameterised2:Address",
  "reahl.doc.examples.tutorial.sessionscopebootstrap.sessionscopebootstrap:User",
  "reahl.doc.examples.tutorial.sessionscopebootstrap.sessionscopebootstrap:LoginSession",
  "reahl.doc.examples.tutorial.accessbootstrap.accessbootstrap:AddressBook",
  "reahl.doc.examples.tutorial.accessbootstrap.accessbootstrap:Collaborator",
  "reahl.doc.examples.tutorial.accessbootstrap.accessbootstrap:Address",
  "reahl.doc.examples.tutorial.i18nexamplebootstrap.i18nexamplebootstrap:Address",
  "reahl.doc.examples.tutorial.componentconfigbootstrap.componentconfigbootstrap:Address",
  "reahl.doc.examples.tutorial.migrationexamplebootstrap.migrationexamplebootstrap:Address",
  "reahl.doc.examples.tutorial.jobsbootstrap.jobsbootstrap:Address",
  "reahl.doc.examples.tutorial.tablebootstrap.tablebootstrap:Address",
  "reahl.doc.examples.tutorial.datatablebootstrap.datatablebootstrap:Address",
  "reahl.doc.examples.tutorial.dynamiccontent.dynamiccontent:InvestmentOrder",
  "reahl.doc.examples.tutorial.dynamiccontent.dynamiccontent:Allocation",
  "reahl.doc.examples.howtos.paymentpaypal.paymentpaypal:ShoppingCart",
  "reahl.doc.examples.howtos.responsivedisclosure.responsivedisclosure:InvestmentOrder",
  "reahl.doc.examples.howtos.responsivedisclosure.responsivedisclosure:Allocation",
  "reahl.doc.examples.howtos.responsivedisclosure.responsivedisclosure:IDDocument"
  ]
schedule = [
  "reahl.doc.examples.tutorial.jobsbootstrap.jobsbootstrap:Address.clear_added_flags"
  ]

[tool.reahl-component.versions."6.1"]
dependencies = [
  "reahl-web>=6.1,<6.2",
  "reahl-component>=6.1,<6.2",
  "reahl-sqlalchemysupport>=6.1,<6.2",
  "reahl-web-declarative>=6.1,<6.2",
  "reahl-domain>=6.1,<6.2",
  "reahl-domainui>=6.1,<6.2",
  "reahl-commands>=6.1,<6.2",
  "reahl-dev>=6.1,<6.2",
  "reahl-paypalsupport>=6.1,<6.2"
  ]

[tool.reahl-component.versions."6.0"]
dependencies = [
  "reahl-web>=6.0,<6.1",
  "reahl-component>=6.0,<6.1",
  "reahl-sqlalchemysupport>=6.0,<6.1",
  "reahl-web-declarative>=6.0,<6.1",
  "reahl-domain>=6.0,<6.1",
  "reahl-domainui>=6.0,<6.1",
  "reahl-commands>=6.0,<6.1",
  "reahl-dev>=6.0,<6.1",
  "reahl-paypalsupport>=6.0,<6.1"
  ]

[tool.reahl-component.versions."5.2"]
dependencies = [
  "reahl-web>=5.2,<5.3",
  "reahl-component>=5.2,<5.3",
  "reahl-sqlalchemysupport>=5.2,<5.3",
  "reahl-web-declarative>=5.2,<5.3",
  "reahl-domain>=5.2,<5.3",
  "reahl-domainui>=5.2,<5.3",
  "reahl-commands>=5.2,<5.3",
  "reahl-dev>=5.2,<5.3",
  "reahl-paypalsupport>=5.2,<5.3"
  ]

[tool.reahl-component.versions."5.1"]
dependencies = [
  "reahl-web>=5.1,<5.2",
  "reahl-component>=5.1,<5.2",
  "reahl-sqlalchemysupport>=5.1,<5.2",
  "reahl-web-declarative>=5.1,<5.2",
  "reahl-domain>=5.1,<5.2",
  "reahl-domainui>=5.1,<5.2",
  "reahl-commands>=5.1,<5.2",
  "reahl-dev>=5.1,<5.2"
  ]

[tool.reahl-component.versions."5.0"]
dependencies = [
  "reahl-web>=5.0,<5.1",
  "reahl-component>=5.0,<5.1",
  "reahl-sqlalchemysupport>=5.0,<5.1",
  "reahl-web-declarative>=5.0,<5.1",
  "reahl-domain>=5.0,<5.1",
  "reahl-domainui>=5.0,<5.1",
  "reahl-commands>=5.0,<5.1"
  ]

[tool.reahl-component.versions."4.0"]
dependencies = [
  "reahl-web>=4.0,<4.1",
  "reahl-component>=4.0,<4.1",
  "reahl-sqlalchemysupport>=4.0,<4.1",
  "reahl-web-declarative>=4.0,<4.1",
  "reahl-domain>=4.0,<4.1",
  "reahl-domainui>=4.0,<4.1",
  "reahl-commands>=4.0,<4.1"
  ]

[tool.reahl-component.versions."3.2"]
dependencies = [
  "reahl-web>=3.2,<3.3",
  "reahl-component>=3.2,<3.3",
  "reahl-sqlalchemysupport>=3.2,<3.3",
  "reahl-web-declarative>=3.2,<3.3",
  "reahl-domain>=3.2,<3.3",
  "reahl-domainui>=3.2,<3.3"
  ]

[tool.reahl-component.versions."3.1"]
dependencies = [
  "reahl-web>=3.1,<3.2",
  "reahl-component>=3.1,<3.2",
  "reahl-sqlalchemysupport>=3.1,<3.2",
  "reahl-web-declarative>=3.1,<3.2",
  "reahl-domain>=3.1,<3.2",
  "reahl-domainui>=3.1,<3.2"
  ]

[tool.reahl-component.versions."3.0"]
dependencies = [
  "reahl-web>=3.0,<3.1",
  "reahl-component>=3.0,<3.1",
  "reahl-sqlalchemysupport>=3.0,<3.1",
  "reahl-web-declarative>=3.0,<3.1",
  "reahl-domain>=3.0,<3.1",
  "reahl-domainui>=3.0,<3.1"
  ]

[tool.reahl-component.versions."2.1"]
dependencies = [
  "reahl-web>=2.1,<2.2",
  "reahl-component>=2.1,<2.2",
  "reahl-sqlalchemysupport>=2.1,<2.2",
  "reahl-web-elixirimpl>=2.1,<2.2",
  "reahl-domain>=2.1,<2.2",
  "reahl-domainui>=2.1,<2.2"
  ]

[tool.reahl-component.versions."2.0"]
dependencies = [
  "reahl-web>=2.0,<2.1",
  "reahl-component>=2.0,<2.1",
  "reahl-sqlalchemysupport>=2.0,<2.1",
  "reahl-web-elixirimpl>=2.0,<2.1",
  "reahl-domain>=2.0,<2.1",
  "reahl-domainui>=2.0,<2.1"
  ]
