[options]
component =
  { 
     "persisted_classes": [
        "reahl.doc.examples.features.persistence.persistence:Comment",
        "reahl.doc.examples.features.dynamiccontent.dynamiccontent:Calculator",
        "reahl.doc.examples.web.fileupload.fileupload:Comment",
        "reahl.doc.examples.web.fileupload.fileupload:AttachedFile",
        "reahl.doc.examples.tutorial.test_model2:Address",
        "reahl.doc.examples.tutorial.addressbook2.addressbook2:Address",
        "reahl.doc.examples.tutorial.addressbook2bootstrap.addressbook2bootstrap:Address",
        "reahl.doc.examples.tutorial.addressbook1.addressbook1:Address",
        "reahl.doc.examples.tutorial.pageflow1.pageflow1:Address",
        "reahl.doc.examples.tutorial.parameterised1.parameterised1:Address",
        "reahl.doc.examples.tutorial.parameterised2.parameterised2:Address",
        "reahl.doc.examples.tutorial.sessionscopebootstrap.sessionscopebootstrap:User",
        "reahl.doc.examples.tutorial.sessionscopebootstrap.sessionscopebootstrap:LoginSession",
        "reahl.doc.examples.tutorial.accessbootstrap.accessbootstrap:AddressBook",
        "reahl.doc.examples.tutorial.accessbootstrap.accessbootstrap:Collaborator",
        "reahl.doc.examples.tutorial.accessbootstrap.accessbootstrap:Address",
        "reahl.doc.examples.tutorial.i18nexamplebootstrap.i18nexamplebootstrap:Address",
        "reahl.doc.examples.tutorial.componentconfigbootstrap.componentconfigbootstrap:Address",
        "reahl.doc.examples.tutorial.migrationexamplebootstrap.migrationexamplebootstrap:Address",
        "reahl.doc.examples.tutorial.jobsbootstrap.jobsbootstrap:Address",
        "reahl.doc.examples.tutorial.tablebootstrap.tablebootstrap:Address",
        "reahl.doc.examples.tutorial.datatablebootstrap.datatablebootstrap:Address",
        "reahl.doc.examples.tutorial.dynamiccontent.dynamiccontent:InvestmentOrder",
        "reahl.doc.examples.tutorial.dynamiccontent.dynamiccontent:Allocation",
        "reahl.doc.examples.howtos.paymentpaypal.paymentpaypal:ShoppingCart",
        "reahl.doc.examples.howtos.responsivedisclosure.responsivedisclosure:InvestmentOrder",
        "reahl.doc.examples.howtos.responsivedisclosure.responsivedisclosure:Allocation",
        "reahl.doc.examples.howtos.responsivedisclosure.responsivedisclosure:IDDocument"
        ]
  }     
