[options]
component = 
  configuration = "reahl.doc.examples.tutorial.componentconfigbootstrap.componentconfigbootstrap:AddressConfig"
  persisted = [
    "reahl.doc.examples.features.persistence.persistence:Comment",
    "reahl.doc.examples.features.dynamiccontent.dynamiccontent:Calculator",
    "reahl.doc.examples.web.fileupload.fileupload:Comment",
    "reahl.doc.examples.web.fileupload.fileupload:AttachedFile",
    "reahl.doc.examples.tutorial.test_model2:Address",
    "reahl.doc.examples.tutorial.addressbook2.addressbook2:Address",
    "reahl.doc.examples.tutorial.addressbook2bootstrap.addressbook2bootstrap:Address",
    "reahl.doc.examples.tutorial.addressbook1.addressbook1:Address",
    "reahl.doc.examples.tutorial.pageflow1.pageflow1:Address",
    "reahl.doc.examples.tutorial.parameterised1.parameterised1:Address",
    "reahl.doc.examples.tutorial.parameterised2.parameterised2:Address",
    "reahl.doc.examples.tutorial.sessionscopebootstrap.sessionscopebootstrap:User",
    "reahl.doc.examples.tutorial.sessionscopebootstrap.sessionscopebootstrap:LoginSession",
    "reahl.doc.examples.tutorial.accessbootstrap.accessbootstrap:AddressBook",
    "reahl.doc.examples.tutorial.accessbootstrap.accessbootstrap:Collaborator",
    "reahl.doc.examples.tutorial.accessbootstrap.accessbootstrap:Address",
    "reahl.doc.examples.tutorial.i18nexamplebootstrap.i18nexamplebootstrap:Address",
    "reahl.doc.examples.tutorial.componentconfigbootstrap.componentconfigbootstrap:Address",
    "reahl.doc.examples.tutorial.migrationexamplebootstrap.migrationexamplebootstrap:Address",
    "reahl.doc.examples.tutorial.jobsbootstrap.jobsbootstrap:Address",
    "reahl.doc.examples.tutorial.tablebootstrap.tablebootstrap:Address",
    "reahl.doc.examples.tutorial.datatablebootstrap.datatablebootstrap:Address",
    "reahl.doc.examples.tutorial.dynamiccontent.dynamiccontent:InvestmentOrder",
    "reahl.doc.examples.tutorial.dynamiccontent.dynamiccontent:Allocation",
    "reahl.doc.examples.howtos.paymentpaypal.paymentpaypal:ShoppingCart",
    "reahl.doc.examples.howtos.responsivedisclosure.responsivedisclosure:InvestmentOrder",
    "reahl.doc.examples.howtos.responsivedisclosure.responsivedisclosure:Allocation",
    "reahl.doc.examples.howtos.responsivedisclosure.responsivedisclosure:IDDocument"
  ]
  schedule = [
    "reahl.doc.examples.tutorial.jobsbootstrap.jobsbootstrap:Address.clear_added_flags"
  ]
  [versions.'5.2']
  install_requires = [
    "reahl-web>=5.2,<5.3",
    "reahl-component>=5.2,<5.3",
    "reahl-sqlalchemysupport>=5.2,<5.3",
    "reahl-web-declarative>=5.2,<5.3",
    "reahl-domain>=5.2,<5.3",
    "reahl-domainui>=5.2,<5.3",
    "reahl-commands>=5.2,<5.3",
    "reahl-dev>=5.2,<5.3",
    "reahl-paypalsupport>=5.2,<5.3",
    "pytest>=3.0",
    "setuptools>=32.3.1",
    "plotly>=5.1.0,<5.6.99999"
  ]
  [versions.'5.1']
  install_requires = [
    "reahl-web>=5.1,<5.2",
    "reahl-component>=5.1,<5.2",
    "reahl-sqlalchemysupport>=5.1,<5.2",
    "reahl-web-declarative>=5.1,<5.2",
    "reahl-domain>=5.1,<5.2",
    "reahl-domainui>=5.1,<5.2",
    "reahl-commands>=5.1,<5.2",
    "reahl-dev>=5.1,<5.2",
    "pytest>=3.0",
    "setuptools>=32.3.1"
  ]
  [versions.'5.0']
  install_requires = [
    "reahl-web>=5.0,<5.1",
    "reahl-component>=5.0,<5.1",
    "reahl-sqlalchemysupport>=5.0,<5.1",
    "reahl-web-declarative>=5.0,<5.1",
    "reahl-domain>=5.0,<5.1",
    "reahl-domainui>=5.0,<5.1",
    "reahl-commands>=5.0,<5.1",
    "pytest>=3.0",
    "setuptools>=32.3.1"
  ]
  [versions.'4.0']
  install_requires = [
    "reahl-web>=4.0,<4.1",
    "reahl-component>=4.0,<4.1",
    "reahl-sqlalchemysupport>=4.0,<4.1",
    "reahl-web-declarative>=4.0,<4.1",
    "reahl-domain>=4.0,<4.1",
    "reahl-domainui>=4.0,<4.1",
    "reahl-commands>=4.0,<4.1",
    "pytest>=3.0",
    "setuptools>=32.3.1"
  ]
  [versions.'3.2']
  install_requires = [
    "reahl-web>=3.2,<3.3",
    "reahl-component>=3.2,<3.3",
    "reahl-sqlalchemysupport>=3.2,<3.3",
    "reahl-web-declarative>=3.2,<3.3",
    "reahl-domain>=3.2,<3.3",
    "reahl-domainui>=3.2,<3.3",
    "nose"
  ]
  [versions.'3.1']
  install_requires = [
    "reahl-web>=3.1,<3.2",
    "reahl-component>=3.1,<3.2",
    "reahl-sqlalchemysupport>=3.1,<3.2",
    "reahl-web-declarative>=3.1,<3.2",
    "reahl-domain>=3.1,<3.2",
    "reahl-domainui>=3.1,<3.2"
  ]
  [versions.'3.0']
  install_requires = [
    "reahl-web>=3.0,<3.1",
    "reahl-component>=3.0,<3.1",
    "reahl-sqlalchemysupport>=3.0,<3.1",
    "reahl-web-declarative>=3.0,<3.1",
    "reahl-domain>=3.0,<3.1",
    "reahl-domainui>=3.0,<3.1"
  ]
  [versions.'2.1']
  install_requires = [
    "reahl-web>=2.1,<2.2",
    "reahl-component>=2.1,<2.2",
    "reahl-sqlalchemysupport>=2.1,<2.2",
    "reahl-web-elixirimpl>=2.1,<2.2",
    "reahl-domain>=2.1,<2.2",
    "reahl-domainui>=2.1,<2.2"
  ]
  [versions.'2.0']
  install_requires = [
    "reahl-web>=2.0,<2.1",
    "reahl-component>=2.0,<2.1",
    "reahl-sqlalchemysupport>=2.0,<2.1",
    "reahl-web-elixirimpl>=2.0,<2.1",
    "reahl-domain>=2.0,<2.1",
    "reahl-domainui>=2.0,<2.1"
  ]
  

[options.entry_points]
reahl.translations = 
  reahl-doc = reahl.messages
reahl.component.commands = 
  GetExample = reahl.doc.commands:GetExample
  ListExamples = reahl.doc.commands:ListExamples

[options.package_data]
* = 
  */LC_MESSAGES/*.mo
  webpack/*.scss
  webpack/*.js
