[options]
component =
  { 
     "persisted_classes": [
        "reahl.partymodel:Party",
        "reahl.systemaccountmodel:SystemAccount",
        "reahl.systemaccountmodel:LoginSession",
        "reahl.systemaccountmodel:EmailAndPasswordSystemAccount",
        "reahl.systemaccountmodel:AccountManagementInterface",
        "reahl.systemaccountmodel:VerificationRequest",
        "reahl.systemaccountmodel:VerifyEmailRequest",
        "reahl.systemaccountmodel:NewPasswordRequest",
        "reahl.systemaccountmodel:ActivateAccount",
        "reahl.systemaccountmodel:ChangeAccountEmail",
        "reahl.workflowmodel:DeferredAction",
        "reahl.workflowmodel:Requirement",
        "reahl.workflowmodel:Queue",
        "reahl.workflowmodel:Task"
        ]
  }     
