[options]
test_suite = reahl.domain_dev
component = 
  configuration = "reahl.systemaccountmodel:SystemAccountConfig"
  schedule = [
    "reahl.workflowmodel:DeferredAction.check_deadline"
  ]
  persisted = [
     "reahl.partymodel:Party",
     "reahl.systemaccountmodel:SystemAccount",
     "reahl.systemaccountmodel:LoginSession",
     "reahl.systemaccountmodel:EmailAndPasswordSystemAccount",
     "reahl.systemaccountmodel:AccountManagementInterface",
     "reahl.systemaccountmodel:VerificationRequest",
     "reahl.systemaccountmodel:VerifyEmailRequest",
     "reahl.systemaccountmodel:NewPasswordRequest",
     "reahl.systemaccountmodel:ActivateAccount",
     "reahl.systemaccountmodel:ChangeAccountEmail",
     "reahl.workflowmodel:DeferredAction",
     "reahl.workflowmodel:Requirement",
     "reahl.workflowmodel:Queue",
     "reahl.workflowmodel:Task"
  ]
  [versions.'6.0']
  install_requires = [
    "reahl-component>=6.0,<6.1",
    "reahl-mailutil>=6.0,<6.1",
    "reahl-sqlalchemysupport>=6.0,<6.1",
    "reahl-web-declarative>=6.0,<6.1"
  ]
  [versions.'5.2']
  install_requires = [
    "reahl-component>=5.2,<5.3",
    "reahl-mailutil>=5.2,<5.3",
    "reahl-sqlalchemysupport>=5.2,<5.3",
    "reahl-web-declarative>=5.2,<5.3"
  ]
  migrations = [
    "reahl.domain.migrations:AddPolimorphicEntityName"
  ]
  [versions.'5.1']
  install_requires = [
    "reahl-component>=5.1,<5.2",
    "reahl-mailutil>=5.1,<5.2",
    "reahl-sqlalchemysupport>=5.1,<5.2",
    "reahl-web-declarative>=5.1,<5.2"
  ]
  [versions.'5.0']
  install_requires = [
    "reahl-component>=5.0,<5.1",
    "reahl-mailutil>=5.0,<5.1",
    "reahl-sqlalchemysupport>=5.0,<5.1",
    "reahl-web-declarative>=5.0,<5.1"
  ]
  [versions.'4.0']
  install_requires = [
    "reahl-component>=4.0,<4.1",
    "reahl-mailutil>=4.0,<4.1",
    "reahl-sqlalchemysupport>=4.0,<4.1",
    "reahl-web-declarative>=4.0,<4.1"
  ]
  migrations = [
    "reahl.domain.migrations:ChangeSchemaToBeMySqlCompatible",
    "reahl.domain.migrations:ChangePasswordHash",
    "reahl.domain.migrations:RemoveDeadApacheDigestColumn"
  ]
  [versions.'3.2']
  install_requires = [
    "reahl-component>=3.2,<3.3",
    "reahl-mailutil>=3.2,<3.3",
    "reahl-sqlalchemysupport>=3.2,<3.3",
    "reahl-web-declarative>=3.2,<3.3"
  ]
  [versions.'3.1']
  install_requires = [
    "reahl-component>=3.1,<3.2",
    "reahl-mailutil>=3.1,<3.2",
    "reahl-sqlalchemysupport>=3.1,<3.2",
    "reahl-web-declarative>=3.1,<3.2"
  ]
  migrations = [
    "reahl.domain.migrations:AddLoginSession"
  ]
  [versions.'3.0']
  install_requires = [
    "reahl-component>=3.0,<3.1",
    "reahl-mailutil>=3.0,<3.1",
    "reahl-interfaces>=3.0,<3.1",
    "reahl-sqlalchemysupport>=3.0,<3.1"
  ]
  migrations = [
    "reahl.domain.migrations:ElixirToDeclarativeDomainChanges"
  ]
  [versions.'2.1']
  install_requires = [
    "reahl-component>=2.1,<2.2",
    "reahl-mailutil>=2.1,<2.2",
    "reahl-interfaces>=2.1,<2.2",
    "reahl-sqlalchemysupport>=2.1,<2.2"
  ]
  [versions.'2.0']
  install_requires = [
    "reahl-component>=2.0,<2.1",
    "reahl-mailutil>=2.0,<2.1",
    "reahl-interfaces>=2.0,<2.1",
    "reahl-sqlalchemysupport>=2.0,<2.1"
  ]
  migrations = [
    "reahl.domain.migrations:CreateDatabase"
  ]
  

[options.entry_points]
reahl.translations = 
  reahl-domain = reahl.messages

[options.package_data]
* = 
  */LC_MESSAGES/*.mo

