[build-system]
requires = [
  "setuptools >= 68",
  "wheel",
  "setuptools-git >= 1.1",
  "pytest-runner",
  "toml",
  "reahl-component-metadata >= 7.0.0"
  ]
build-backend = "setuptools.build_meta"

[project]
name = "reahl-domainui"
version = "7.0.0"
description = "A user interface for reahl-domain."
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: User Interfaces"
  ]
dependencies = [
  "reahl-component>=7.0,<7.1",
  "reahl-sqlalchemysupport>=7.0,<7.1",
  "reahl-web>=7.0,<7.1",
  "reahl-web-declarative>=7.0,<7.1",
  "reahl-domain>=7.0,<7.1",
  "setuptools>=51.0.0"
  ]
authors = [ 
  {name = "Iwan Vosloo", email = "iwan@reahl.org"},
  {name = "Craig Sparks", email = "craig@reahl.org"}
]

[project.optional-dependencies]
test = [
  "pytest>=3.0",
  "reahl-tofu",
  "reahl-stubble",
  "reahl-dev",
  "reahl-webdev",
  "reahl-browsertools",
  "reahl-postgresqlsupport"
  ]

[project.entry-points."reahl.translations"]
reahl-domainui = "reahl.messages"

[project.entry-points."reahl.workflowui.task_widgets"]
"bootstrap.TaskWidget" = "reahl.domainui.bootstrap.workflow:TaskWidget"

[tool.setuptools.packages.find]
exclude = ["etc", "build", "dist"]

[tool.reahl-component]
configuration = "reahl.domainuiegg:DomainUiConfig"

[tool.reahl-component.versions."6.1"]
dependencies = [
  "reahl-component>=6.1,<6.2",
  "reahl-sqlalchemysupport>=6.1,<6.2",
  "reahl-web>=6.1,<6.2",
  "reahl-web-declarative>=6.1,<6.2",
  "reahl-domain>=6.1,<6.2"
  ]

[tool.reahl-component.versions."6.0"]
dependencies = [
  "reahl-component>=6.0,<6.1",
  "reahl-sqlalchemysupport>=6.0,<6.1",
  "reahl-web>=6.0,<6.1",
  "reahl-web-declarative>=6.0,<6.1",
  "reahl-domain>=6.0,<6.1"
  ]

[tool.reahl-component.versions."5.2"]
dependencies = [
  "reahl-component>=5.2,<5.3",
  "reahl-sqlalchemysupport>=5.2,<5.3",
  "reahl-web>=5.2,<5.3",
  "reahl-web-declarative>=5.2,<5.3",
  "reahl-domain>=5.2,<5.3"
  ]

[tool.reahl-component.versions."5.1"]
dependencies = [
  "reahl-component>=5.1,<5.2",
  "reahl-sqlalchemysupport>=5.1,<5.2",
  "reahl-web>=5.1,<5.2",
  "reahl-web-declarative>=5.1,<5.2",
  "reahl-domain>=5.1,<5.2"
  ]

[tool.reahl-component.versions."5.0"]
dependencies = [
  "reahl-component>=5.0,<5.1",
  "reahl-sqlalchemysupport>=5.0,<5.1",
  "reahl-web>=5.0,<5.1",
  "reahl-web-declarative>=5.0,<5.1",
  "reahl-domain>=5.0,<5.1"
  ]

[tool.reahl-component.versions."4.0"]
dependencies = [
  "reahl-component>=4.0,<4.1",
  "reahl-sqlalchemysupport>=4.0,<4.1",
  "reahl-web>=4.0,<4.1",
  "reahl-web-declarative>=4.0,<4.1",
  "reahl-domain>=4.0,<4.1"
  ]

[tool.reahl-component.versions."3.2"]
dependencies = [
  "reahl-component>=3.2,<3.3",
  "reahl-sqlalchemysupport>=3.2,<3.3",
  "reahl-web>=3.2,<3.3",
  "reahl-web-declarative>=3.2,<3.3",
  "reahl-domain>=3.2,<3.3"
  ]

[tool.reahl-component.versions."3.1"]
dependencies = [
  "reahl-component>=3.1,<3.2",
  "reahl-sqlalchemysupport>=3.1,<3.2",
  "reahl-web>=3.1,<3.2",
  "reahl-web-declarative>=3.1,<3.2",
  "reahl-domain>=3.1,<3.2"
  ]

[tool.reahl-component.versions."3.0"]
dependencies = [
  "reahl-component>=3.0,<3.1",
  "reahl-sqlalchemysupport>=3.0,<3.1",
  "reahl-web>=3.0,<3.1",
  "reahl-domain>=3.0,<3.1"
  ]

[tool.reahl-component.versions."2.1"]
dependencies = [
  "reahl-component>=2.1,<2.2",
  "reahl-sqlalchemysupport>=2.1,<2.2",
  "reahl-web>=2.1,<2.2",
  "reahl-domain>=2.1,<2.2"
  ]

[tool.reahl-component.versions."2.0"]
dependencies = [
  "reahl-component>=2.0,<2.1",
  "reahl-sqlalchemysupport>=2.0,<2.1",
  "reahl-web>=2.0,<2.1",
  "reahl-domain>=2.0,<2.1"
  ]
