[options]
component =
  {
    "configuration": "reahl.domainuiegg:DomainUiConfig",
    "versions": {
      "5.2": {
        "install_requires": [
          "reahl-component>=5.2,<5.3",
          "reahl-sqlalchemysupport>=5.2,<5.3",
          "reahl-web>=5.2,<5.3",
          "reahl-web-declarative>=5.2,<5.3",
          "reahl-domain>=5.2,<5.3",
          "setuptools>=32.3.1"
        ]
      },
      "5.1": {
        "install_requires": [
          "reahl-component>=5.1,<5.2",
          "reahl-sqlalchemysupport>=5.1,<5.2",
          "reahl-web>=5.1,<5.2",
          "reahl-web-declarative>=5.1,<5.2",
          "reahl-domain>=5.1,<5.2",
          "setuptools>=32.3.1"
        ]
      },
      "5.0": {
        "install_requires": [
          "reahl-component>=5.0,<5.1",
          "reahl-sqlalchemysupport>=5.0,<5.1",
          "reahl-web>=5.0,<5.1",
          "reahl-web-declarative>=5.0,<5.1",
          "reahl-domain>=5.0,<5.1",
          "setuptools>=32.3.1"
        ]
      },
      "4.0": {
        "install_requires": [
          "reahl-component>=4.0,<4.1",
          "reahl-sqlalchemysupport>=4.0,<4.1",
          "reahl-web>=4.0,<4.1",
          "reahl-web-declarative>=4.0,<4.1",
          "reahl-domain>=4.0,<4.1",
          "setuptools>=32.3.1"
        ]
      },
      "3.2": {
        "install_requires": [
          "reahl-component>=3.2,<3.3",
          "reahl-sqlalchemysupport>=3.2,<3.3",
          "reahl-web>=3.2,<3.3",
          "reahl-web-declarative>=3.2,<3.3",
          "reahl-domain>=3.2,<3.3"
        ]
      },
      "3.1": {
        "install_requires": [
          "reahl-component>=3.1,<3.2",
          "reahl-sqlalchemysupport>=3.1,<3.2",
          "reahl-web>=3.1,<3.2",
          "reahl-web-declarative>=3.1,<3.2",
          "reahl-domain>=3.1,<3.2"
        ]
      },
      "3.0": {
        "install_requires": [
          "reahl-component>=3.0,<3.1",
          "reahl-sqlalchemysupport>=3.0,<3.1",
          "reahl-web>=3.0,<3.1",
          "reahl-domain>=3.0,<3.1"
        ]
      },
      "2.1": {
        "install_requires": [
          "reahl-component>=2.1,<2.2",
          "reahl-sqlalchemysupport>=2.1,<2.2",
          "reahl-web>=2.1,<2.2",
          "reahl-domain>=2.1,<2.2"
        ]
      },
      "2.0": {
        "install_requires": [
          "reahl-component>=2.0,<2.1",
          "reahl-sqlalchemysupport>=2.0,<2.1",
          "reahl-web>=2.0,<2.1",
          "reahl-domain>=2.0,<2.1"
        ]
      }
    }
  }

[options.entry_points]
  reahl.translations = 
    reahl-domainui = reahl.messages
  reahl.workflowui.task_widgets = 
    bootstrap.TaskWidget = reahl.domainui.bootstrap.workflow:TaskWidget


[options.package_data]
  * = 
    */LC_MESSAGES/*.mo


