[metadata]
name = reahl-domainui
version = 7.0.0
author = Iwan Vosloo
author_email = iwan@reahl.org
description = A user interface for reahl-domain.
long_description = file: README.rst
license_files = LICENSE
classifiers =
  Development Status :: 5 - Production/Stable
  Framework :: Reahl
  Intended Audience :: Developers
  License :: OSI Approved
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Software Development :: User Interfaces
  
[options.packages.find]
exclude = etc, build, dist

[options.extras_require]
test =
  pytest>=3.0
  reahl-tofu
  reahl-stubble
  reahl-dev
  reahl-webdev
  reahl-browsertools
  reahl-postgresqlsupport

[options]
packages = find_namespace:

install_requires =
  reahl-component>=7.0,<7.1
  reahl-sqlalchemysupport>=7.0,<7.1
  reahl-web>=7.0,<7.1
  reahl-web-declarative>=7.0,<7.1
  reahl-domain>=7.0,<7.1
  setuptools>=51.0.0

component = 
  configuration = "reahl.domainuiegg:DomainUiConfig"
  [versions.'6.1']
  install_requires = [
    "reahl-component>=6.1,<6.2",
    "reahl-sqlalchemysupport>=6.1,<6.2",
    "reahl-web>=6.1,<6.2",
    "reahl-web-declarative>=6.1,<6.2",
    "reahl-domain>=6.1,<6.2"
  ]
  [versions.'6.0']
  install_requires = [
    "reahl-component>=6.0,<6.1",
    "reahl-sqlalchemysupport>=6.0,<6.1",
    "reahl-web>=6.0,<6.1",
    "reahl-web-declarative>=6.0,<6.1",
    "reahl-domain>=6.0,<6.1"
  ]
  [versions.'5.2']
  install_requires = [
    "reahl-component>=5.2,<5.3",
    "reahl-sqlalchemysupport>=5.2,<5.3",
    "reahl-web>=5.2,<5.3",
    "reahl-web-declarative>=5.2,<5.3",
    "reahl-domain>=5.2,<5.3"
  ]
  [versions.'5.1']
  install_requires = [
    "reahl-component>=5.1,<5.2",
    "reahl-sqlalchemysupport>=5.1,<5.2",
    "reahl-web>=5.1,<5.2",
    "reahl-web-declarative>=5.1,<5.2",
    "reahl-domain>=5.1,<5.2"
  ]
  [versions.'5.0']
  install_requires = [
    "reahl-component>=5.0,<5.1",
    "reahl-sqlalchemysupport>=5.0,<5.1",
    "reahl-web>=5.0,<5.1",
    "reahl-web-declarative>=5.0,<5.1",
    "reahl-domain>=5.0,<5.1"
  ]
  [versions.'4.0']
  install_requires = [
    "reahl-component>=4.0,<4.1",
    "reahl-sqlalchemysupport>=4.0,<4.1",
    "reahl-web>=4.0,<4.1",
    "reahl-web-declarative>=4.0,<4.1",
    "reahl-domain>=4.0,<4.1"
  ]
  [versions.'3.2']
  install_requires = [
    "reahl-component>=3.2,<3.3",
    "reahl-sqlalchemysupport>=3.2,<3.3",
    "reahl-web>=3.2,<3.3",
    "reahl-web-declarative>=3.2,<3.3",
    "reahl-domain>=3.2,<3.3"
  ]
  [versions.'3.1']
  install_requires = [
    "reahl-component>=3.1,<3.2",
    "reahl-sqlalchemysupport>=3.1,<3.2",
    "reahl-web>=3.1,<3.2",
    "reahl-web-declarative>=3.1,<3.2",
    "reahl-domain>=3.1,<3.2"
  ]
  [versions.'3.0']
  install_requires = [
    "reahl-component>=3.0,<3.1",
    "reahl-sqlalchemysupport>=3.0,<3.1",
    "reahl-web>=3.0,<3.1",
    "reahl-domain>=3.0,<3.1"
  ]
  [versions.'2.1']
  install_requires = [
    "reahl-component>=2.1,<2.2",
    "reahl-sqlalchemysupport>=2.1,<2.2",
    "reahl-web>=2.1,<2.2",
    "reahl-domain>=2.1,<2.2"
  ]
  [versions.'2.0']
  install_requires = [
    "reahl-component>=2.0,<2.1",
    "reahl-sqlalchemysupport>=2.0,<2.1",
    "reahl-web>=2.0,<2.1",
    "reahl-domain>=2.0,<2.1"
  ]
  

[options.entry_points]
reahl.translations = 
  reahl-domainui = reahl.messages
reahl.workflowui.task_widgets = 
  bootstrap.TaskWidget = reahl.domainui.bootstrap.workflow:TaskWidget

[options.package_data]
* = 
  */LC_MESSAGES/*.mo

