[options]
component =
  {
    "configuration": "reahl.mailutil.reusableconfig:MailConfig",
    "versions": {
      "5.2": {
        "install_requires": [
          "reahl-component>=5.2,<5.3",
          "docutils>=0.14,<0.18.999",
          "Pygments>=2.1.0,<2.11.999"
        ]
      },
      "5.1": {
        "install_requires": [
          "reahl-component>=5.1,<5.2",
          "docutils>=0.14,<0.16.999",
          "Pygments>=2.1.0,<2.6.999"
        ]
      },
      "5.0": {
        "install_requires": [
          "reahl-component>=5.0,<5.1",
          "docutils>=0.14,<0.16.999",
          "Pygments>=2.1.0,<2.6.999"
        ]
      },
      "4.0": {
        "install_requires": [
          "reahl-component>=4.0,<4.1",
          "docutils>=0.12,<0.12.999",
          "Pygments>=2.1.0,<2.1.999"
        ]
      },
      "3.2": {
        "install_requires": [
          "reahl-component>=3.2,<3.3",
          "docutils>=0.12,<0.12.999",
          "Pygments>=2.1.0,<2.1.999"
        ]
      },
      "3.1": {
        "install_requires": [
          "reahl-component>=3.1,<3.2",
          "docutils>=0.12,<0.12.999"
        ]
      },
      "3.0": {
        "install_requires": [
          "reahl-component>=3.0,<3.1",
          "docutils>=0.12,<0.12"
        ]
      },
      "2.1": {
        "install_requires": [
          "reahl-component>=2.1,<2.2",
          "docutils>=0.8,<0.9"
        ]
      },
      "2.0": {
        "install_requires": [
          "reahl-component>=2.0,<2.1",
          "docutils>=0.8,<0.9"
        ]
      }
    }
  }


