[metadata]
name = reahl-mailutil
version = 6.1.1
author = Iwan Vosloo
author_email = iwan@reahl.org
description = Simple utilities for sending email from Reahl.
long_description = file: README.rst
license_files = LICENSE
classifiers =
  Development Status :: 5 - Production/Stable
  Framework :: Reahl
  Intended Audience :: Developers
  License :: OSI Approved
  Operating System :: OS Independent
  Programming Language :: Python :: 3

[options.packages.find]
exclude = etc, build, dist

[options.extras_require]
test =
  pytest>=3.0
  reahl-tofu
  reahl-stubble
  reahl-dev

[options]
packages = find_namespace:

install_requires =
  reahl-component>=6.1,<6.2
  docutils>=0.14,<0.19.999
  Pygments>=2.1.0,<2.13.999

component = 
  configuration = "reahl.mailutil.reusableconfig:MailConfig"
  [versions.'6.0']
  install_requires = [
    "reahl-component>=6.0,<6.1"
  ]
  [versions.'5.2']
  install_requires = [
    "reahl-component>=5.2,<5.3"
  ]
  [versions.'5.1']
  install_requires = [
    "reahl-component>=5.1,<5.2"
  ]
  [versions.'5.0']
  install_requires = [
    "reahl-component>=5.0,<5.1"
  ]
  [versions.'4.0']
  install_requires = [
    "reahl-component>=4.0,<4.1"
  ]
  [versions.'3.2']
  install_requires = [
    "reahl-component>=3.2,<3.3"
  ]
  [versions.'3.1']
  install_requires = [
    "reahl-component>=3.1,<3.2"
  ]
  [versions.'3.0']
  install_requires = [
    "reahl-component>=3.0,<3.1"
  ]
  [versions.'2.1']
  install_requires = [
    "reahl-component>=2.1,<2.2"
  ]
  [versions.'2.0']
  install_requires = [
    "reahl-component>=2.0,<2.1"
  ]
  

