[build-system]
requires = [
  "setuptools >= 68",
  "wheel",
  "setuptools-git >= 1.1",
  "pytest-runner",
  "toml",
  "reahl-component-metadata"
  ]
build-backend = "setuptools.build_meta"

[project]
name = "reahl-mysqlsupport"
version = "7.0.0"
description = "Support for using MySQL with Reahl."
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Reahl",
  "Intended Audience :: Developers",
  "License :: OSI Approved",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3"
  ]
dependencies = [
  "reahl-component>=7.0,<7.1",
  "reahl-commands>=7.0,<7.1",
  "mysqlclient>=1.3,<2.1.9999"
  ]
authors = [ 
  {name = "Iwan Vosloo", email = "iwan@reahl.org"},
  {name = "Craig Sparks", email = "craig@reahl.org"}
]

[project.optional-dependencies]

[project.entry-points."reahl.component.databasecontrols"]
MysqlControl = "reahl.mysqlsupport:MysqlControl"

[tool.reahl-component.versions."6.1"]
install_requires = [
  "reahl-component>=6.1,<6.2",
  "reahl-commands>=6.1,<6.2"
  ]

[tool.reahl-component.versions."6.0"]
install_requires = [
  "reahl-component>=6.0,<6.1",
  "reahl-commands>=6.0,<6.1"
  ]

[tool.reahl-component.versions."5.2"]
install_requires = [
  "reahl-component>=5.2,<5.3",
  "reahl-commands>=5.2,<5.3"
  ]

[tool.reahl-component.versions."5.1"]
install_requires = [
  "reahl-component>=5.1,<5.2",
  "reahl-commands>=5.1,<5.2"
  ]

[tool.reahl-component.versions."5.0"]
install_requires = [
  "reahl-component>=5.0,<5.1",
  "reahl-commands>=5.0,<5.1"
  ]

[tool.reahl-component.versions."4.0"]
install_requires = [
  "reahl-component>=4.0,<4.1",
  "reahl-commands>=4.0,<4.1"
  ]
